--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-      "node" : "12.18.3",
-      "npm" : "6.14.6"
-  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "bootstrap": "^4.5.2",
     "cra-template": "1.0.3",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-card-flipper": "^1.0.1",
     "react-customizable-progressbar": "^1.0.1",
@@ -24,7 +23,7 @@
     "react-tilt": "^0.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
