--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node" : "12.18.3",
-    "npm" : "6.14.6"
+    "node": "12.18.3",
+    "npm": "6.14.6"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
@@ -20,6 +20,7 @@
     "react-customizable-progressbar": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.14",
+    "react-parallax": "^3.0.3",
     "react-responsive-modal": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
